# CW_5

./: .gitignore  README.md  main.py  pyproject.toml
src/: db_manager.py  fileworker.py  hh_api.py  utils.py
tests/: test_db_manager.py  test_hh_api.py  test_vacancy.py
